--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,31 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
+# Production build
 /build
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files
+# Environment variables
 .env*
+!.env.example  # Keep an example file for reference
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
-next-env.d.ts
 
-.package-lock.json
-
+# Misc
+.DS_Store  # macOS metadata files
+Thumbs.db  # Windows metadata files
