--- a/.github/workflows/buildandtestval.yml
+++ b/.github/workflows/buildandtestval.yml
@@ -18,12 +18,12 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/checkout@v4
         with:
-          node-version: '16'  # or your preferred Node.js version
+          node-version: 'latest'  # or your preferred Node.js version
 
       - name: Install dependencies
         run: npm install
