--- a/.github/workflows/buildandtestval.yml
+++ b/.github/workflows/buildandtestval.yml
@@ -2,8 +2,9 @@ name: CI Build and Test Validation
 
 on:
   push:
-      branches:
-        - prod
+    branches:
+      - prod
+      - dev
   pull_request:
     branches:
       - prod
