--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # Environment variables
-.env*
+.env.local
 !.env.example  # Keep an example file for reference
 
 # Vercel
